--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 nadia hanafiah
-<input type="button" class="click-me" value="Click me" />
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
