--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-Syamsudin Abd Aziz
+nadia
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
