new js structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 Syamsudin Abd Aziz
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
