--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-nadia
+
+<input type="button" class="click" value="click!" />
+
 <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
