--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
 <input type="button" class="click" value="click!" />
-
+<div class="index"></div>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
 
